# authenticode-parser

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  vcpkg.json
.github/workflows/: ci.yml
authenticode-parser-sys/: Cargo.toml  README.md  build.rs
authenticode-parser-sys/src/: bindings.rs  lib.rs
src/: lib.rs
tests/assets/: microsoft.pem  pe_file  sig.pem
tests/it/: conformance.rs  data.rs  main.rs  simple.rs
