[package]
name = "authenticode-parser-sys"
description = "Raw FFI bindings to the authenticode-parser library"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/vthib/authenticode-parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["authenticode", "ffi"]
categories = ["external-ffi-bindings"]
links = "authenticode-parser"
# MSRV
rust-version = "1.60"

[features]
default = []

# Default behavior is to use commited bindings, as those bindings
# are valid for all targets. However, the `bindgen` feature can
# be used to force generating bindings at built time.
bindgen = ["dep:bindgen"]

# If enabled the OpenSSL library is linked statically.
static-openssl = []

[build-dependencies]
# Used to compile the library.
cc = "1.0"
# Used to generate the bindings for the target.
bindgen = { version = "0.69", optional = true, default-features = false, features = [ "runtime" ] }
